--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,16 @@
         </dependency>
         
         <!-- MS SQL JDBC -->
-        <dependency>
+<!--         <dependency>
             <groupId>com.microsoft</groupId>
             <artifactId>sqljdbc42</artifactId>
             <version>4.0-release</version>
+        </dependency> -->
+        
+        <dependency>
+          <groupId>com.microsoft.sqlserver</groupId>
+          <artifactId>mssql-jdbc</artifactId>
+          <version>7.4.1.jre8</version>
         </dependency>
                 
         <!-- Itext PDF -->
